<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="wrap_content">

	<LinearLayout
			android:paddingTop="10dp"
			android:paddingLeft="10dp"
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

		<TextView
				android:gravity="left|center"
				android:layout_weight="1"
				android:textColor="@color/colorTitle"
				android:textSize="16dp"
				android:text="@string/final_step"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"/>

		<ImageView
				android:id="@+id/close"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:src="@android:drawable/ic_menu_close_clear_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

	</LinearLayout>

	<android.support.design.widget.TextInputLayout
			android:id="@+id/nameLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"
	>

		<EditText
				android:id="@+id/name"
				android:textSize="16sp"
				android:backgroundTint="#123"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/full_name"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
			android:id="@+id/phoneLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">

		<EditText
				android:id="@+id/phone"
				android:textSize="16sp"
				android:backgroundTint="#123"
				android:layout_width="match_parent"
				android:lines="1"
				android:maxLines="1"
				android:inputType="number"
				android:maxLength="12"
				android:layout_height="wrap_content"
				android:hint="@string/phone_number"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
			android:id="@+id/addressLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">

		<EditText
				android:id="@+id/address"
				android:textSize="16sp"
				android:backgroundTint="#123"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/address"/>
	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
			android:id="@+id/dateLayout"
			android:layout_width="match_parent"
			android:layout_marginBottom="5dp"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp">

		<EditText
				android:id="@+id/date"
				android:textSize="16sp"
				android:backgroundTint="#123"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/deliver_date"/>
	</android.support.design.widget.TextInputLayout>

	<EditText
			android:id="@+id/comment"
			android:textSize="16sp"
			android:backgroundTint="#123"
			android:layout_width="match_parent"
			android:layout_marginBottom="5dp"
			android:layout_height="wrap_content"
			android:hint="@string/comment"
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="80dp">

		<FrameLayout
				android:layout_weight="1"
				android:layout_width="0dp"
				android:layout_height="match_parent">

			<Button
					android:id="@+id/order"
					android:background="@color/order"
					android:text="@string/order"
					android:layout_gravity="center"
					android:textColor="@android:color/white"
					android:layout_margin="20dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		</FrameLayout>

		<ImageView
				android:layout_weight="1"
				android:src="@drawable/car"
				android:layout_width="0dp"
				android:layout_height="wrap_content"/>

	</LinearLayout>

</LinearLayout>